# latex-admin

./: .editorconfig  .flake8  .gitattributes  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  lint-test-build.yml  pypi_upload.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
latex_admin/: __init__.py  cli.py
tests/: __init__.py  test_latex_admin.py
