[tool.poetry]
name = "latex-admin"
version = "0.1.0"
description = "A CLI tool for managing LaTeX projects(inspired by django-admin)"
authors = ["Murad Bashirov <carlsonmu@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/spitfire-hash/latex-admin"
documentation = "https://latex-admin.readthedocs.io"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]

[tool.poetry.dependencies]
python = ">=3.5"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
flake8 = "^3.8.4"
tox = "^3.20.1"
coverage = "^5.3"
Sphinx = "^3.3.1"
twine = "^3.2.0"
pre-commit = "^2.8.2"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.1.0"
flake8-todo = "^0.7"
mccabe = "^0.6.1"
pep8-naming = "^0.11.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spitfire-hash/latex-admin/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
